<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ftpix</groupId>
    <artifactId>SpendSpentSpent</artifactId>
    <version>11</version>

    <properties>
        <automation.skip>true</automation.skip>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <scm>
        <url>https://github.com/lamarios/SpendSpentSpent</url>
        <connection>scm:git:https://github.com/lamarios/SpendSpentSpent.git</connection>
        <developerConnection>scm:git:git@github.com:lamarios/SpendSpentSpent.git</developerConnection>
    </scm>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/com.ftpix/sparknotation -->
        <dependency>
            <groupId>com.ftpix</groupId>
            <artifactId>sparknotation</artifactId>
            <version>1.13</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/com.j256.ormlite/ormlite-jdbc -->
        <dependency>
            <groupId>com.j256.ormlite</groupId>
            <artifactId>ormlite-jdbc</artifactId>
            <version>5.1</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>1.4.199</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
        </dependency>


        <!-- Handling annoying exceptions in streams
        https://github.com/pivovarit/ThrowingFunction
        -->
        <dependency>
            <groupId>pl.touk</groupId>
            <artifactId>throwing-function</artifactId>
            <version>1.3</version>
        </dependency>


        <dependency>
            <groupId>com.mashape.unirest</groupId>
            <artifactId>unirest-java</artifactId>
            <version>1.4.9</version>
        </dependency>

        <!--<dependency>-->
        <!--<groupId>me.xdrop</groupId>-->
        <!--<artifactId>fuzzywuzzy</artifactId>-->
        <!--<version>1.1.9</version>-->
        <!--</dependency>-->

        <!-- https://mvnrepository.com/artifact/junit/junit -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.7.1</version>
            <scope>test</scope>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-chrome-driver -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-chrome-driver</artifactId>
            <version>3.7.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.detro</groupId>
            <artifactId>ghostdriver</artifactId>
            <version>2.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>2.2.5</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.auth0</groupId>
            <artifactId>java-jwt</artifactId>
            <version>3.10.3</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <!--<plugin>-->
            <!--<groupId>org.lesscss</groupId>-->
            <!--<artifactId>lesscss-maven-plugin</artifactId>-->
            <!--<configuration>-->
            <!--<sourceDirectory>${project.build.sourceDirectory}/assets/less</sourceDirectory>-->
            <!--<outputDirectory>${project.build.resources[0].directory}/public/stylesheets-->
            <!--</outputDirectory>-->
            <!--<compress>true</compress>-->
            <!--<includes>-->
            <!--<include>main.less</include>-->
            <!--</includes>-->
            <!--&lt;!&ndash;<excludes>&ndash;&gt;-->
            <!--&lt;!&ndash;<exclude>variables.less</exclude>&ndash;&gt;-->
            <!--&lt;!&ndash;</excludes>&ndash;&gt;-->
            <!--</configuration>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<goals>-->
            <!--<goal>compile</goal>-->
            <!--</goals>-->
            <!--<phase>compile</phase>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--</plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.6.1</version>
                <configuration>
                    <source>14</source>
                    <target>14</target>
                </configuration>
            </plugin>

            <!-- Build FE with NPM -->


            <!-- BUILD FAT JAR -->
            <!-- Maven Assembly Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.1.0</version>
                <!-- The configuration of the plugin -->

                <executions>
                    <execution>
                        <id>jar-with-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <finalName>SpendSpentSpent-${project.version}</finalName>
                            <appendAssemblyId>false</appendAssemblyId>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <mainClass>com.ftpix.sss.SpendSpentSpent</mainClass>
                                    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                                    <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                                </manifest>
                            </archive>
                        </configuration>
                    </execution>
                </executions>
            </plugin>




            <!-- release to github -->
            <plugin>
                <groupId>de.jutzig</groupId>
                <artifactId>github-release-plugin</artifactId>
                <version>1.2.0</version>
                <configuration>
                    <description>
                        Multi user support

                        Note for migrating users: If you have existing data, you'll have to sign up for an account (set ALLOW_SIGNUP=1 environment variable) all the expenses will be migrated to the first account.
                    </description>
                    <releaseName>${project.version}</releaseName>
                    <tag>${project.version}</tag>
                    <serverId>github-release</serverId>
                    <!-- If your project has additional artifacts, such as ones produced by
                         the maven-assembly-plugin, you can define the following
                         (requires version 1.1.1 of the plugin or higher): -->
                    <fileSets>
                        <fileSet>
                            <directory>${project.build.directory}</directory>
                            <excludes>
                                <exclude>
                                    spendspentspent-${project.version}.jar
                                </exclude>
                            </excludes>
                            <includes>
                                <include>SpendSpentSpent.jar</include>
                            </includes>
                        </fileSet>
                    </fileSets>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                    <systemPropertyVariables>
                        <buildDirectory>${project.build.directory}</buildDirectory>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

            <!--&lt;!&ndash; PhntomJS installation &ndash;&gt;-->
            <!--<plugin>-->
            <!--<groupId>com.github.klieber</groupId>-->
            <!--<artifactId>phantomjs-maven-plugin</artifactId>-->
            <!--<version>0.7</version>-->
            <!--<executions>-->
            <!--<execution>-->
            <!--<goals>-->
            <!--<goal>install</goal>-->
            <!--</goals>-->
            <!--</execution>-->
            <!--</executions>-->
            <!--<configuration>-->
            <!--<version>1.9.7</version>-->
            <!--</configuration>-->
            <!--</plugin>-->
        </plugins>
    </build>

</project>
